test/expected/explain_o_delete__v.out
explain void operator delete()
           ^
12: error: non-member operator "delete" must have at least 1 parameter
